apps/sunshine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sunshine
  labels:
    gateway-access: sunshine
