apps/sunshine/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: sunshine
  namespace: sunshine
subsets:
  - addresses:
      - ip: 10.10.30.10
    ports:
      - port: 47990
